# pathfinder-presentation

./: .gitignore  .gitmodules  LICENSE  README.md  TODOS  build.sh  index.html  setup.cfg
animations/algorithm/: animations.py  path.py  pathfinder.py
animations/bezier_slides/: bezier_definition.py  cubic_bezier.py  n_order_bezier.py  path.py  quadratic_bezier.py
animations/heading/: centrifugal_heading.py  vel_omega_diamond.py
animations/utils/: bezier.py  utils.py
animations/vel_graph_slides/: acc_forward_vel.py  centrifugal_force.py  kinematics.py  kinematics_algorithm.py  limit_vel_kinematics.py  max_vel_slide.py
animations/videos/: BernsteinPoly.json  BezierScene.json  BezierTitle.json  CentrifugalForce.json  CentrifugalHeading.json  CurveDefinition.json  DeCasteljau.json  HeadingPoints.json  HeadingSpread.json  KinematicsAlgorithm.json  NOrderBezier.json  RadianSlide.json  VelOmegaDiamond.json
desmos/: bernstein-desmos.html  bezier-desmos.html
pathfinder-presentation/: README.md  index.html
pathfinder-presentation/animations/: bezier_slide.py  constants.py  curve_definition_slide.py  demo_scene.py
pathfinder-presentation/animations/algorithm/: animations.py  path.py  pathfinder.py
pathfinder-presentation/animations/bezier_slides/: bernstein_poly.py  bezier_definition.py  bezier_title.py  curvature_slide.py  de_casteljau.py  path.py  radian_slide.py
pathfinder-presentation/animations/heading/: centrifugal_heading.py  heading_points.py  (+2 more)
src/manim_revealjs/: __init__.py  manim.js  plugin.py  presentationscene.py
src/webcam_plugin/: webcam.js
(+24 files in other folders)
