[metadata]
name = manim-revealjs
version = 1.0.2
description = Generate Manim animations for presentations using Reveal.js
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rickdw/manim-revealjs
project_urls =
    Bug Tracker = https://github.com/rickdw/manim-revealjs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src